@startuml

title __CELL's Class Diagram__\n

  namespace CasseTete {
    namespace Cell {
      abstract class CasseTete.Cell.Cell {
          - x : int
          - y : int
          + Cell()
          + getX()
          + getY()
          + setX()
          + setY()
          + toString()
      }
    }
  }
  

  namespace CasseTete {
    namespace Cell {
      class CasseTete.Cell.CellPath {
          + CellPath()
          + getPathEntry()
          + getPathExit()
          + setPathEntry()
          + setPathExit()
      }
    }
  }
  

  namespace CasseTete {
    namespace Cell {
      class CasseTete.Cell.CellSymbol {
          - symbol : String
          + CellSymbol()
          + getSymbol()
          + setSymbol()
      }
    }
  }
  

  CasseTete.Cell.CellPath -up-|> CasseTete.Cell.Cell
  CasseTete.Cell.CellPath o-- CasseTete.PathCoordinate : pathEntry
  CasseTete.Cell.CellPath o-- CasseTete.PathCoordinate : pathExit
  CasseTete.Cell.CellSymbol -up-|> CasseTete.Cell.Cell


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
